1. Collection API Улучшения [#258816]