@@ -1,9 +1,8 @@
-package ru.job4j;
+package ru.job4j.collection;
 
 import org.junit.Test;
 import ru.job4j.list.ConvertMatrix2List;
 
-import java.util.Arrays;
 import java.util.List;
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.assertThat;
@@ -16,7 +15,7 @@ public class ConvertMatrix2ListTest {
                 {1, 2},
                 {3, 4}
         };
-        List<Integer> expect = Arrays.asList(
+        List<Integer> expect = List.of(
                 1, 2, 3, 4
         );
         List<Integer> result = list.toList(input);
